// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package protobuf.contrib.immutablejs.protos;

import "java/com/google/apps/jspb/jspb.proto";

option java_package = "com.google.protobuf.contrib.immutablejs.protos";

message IgnoredFields {
  optional string ignored_optional_field = 1 [(jspb.ignore) = true];
  repeated string ignored_repeated_field = 2 [(jspb.ignore) = true];
  optional string not_ignored_field = 3 [(jspb.ignore) = false];
  optional IgnoredFields ignored_submessage = 4 [(jspb.ignore) = true];
}
